# wyvern

./: .atm.toml  .gitignore  .sc-lint.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml
.claude/: orchestration-agent-models.yaml
.claude/agents/: arch-qa.md  critical-plan-reviewer.md  flaky-test-qa.md  plan-scope-reviewer.md  publisher.md  qa-triage.md  quality-mgr.md  registry.yaml  req-qa.md  rust-architect.md  rust-best-practices-agent.md  rust-code-explorer.md  rust-code-reviewer.md  rust-developer.md  rust-qa-agent.md  rust-service-hardening-agent.md  sc-git-worktree-abort.md  sc-git-worktree-cleanup.md  sc-git-worktree-create.md  sc-git-worktree-scan.md  sc-git-worktree-update.md  scrum-master.md
.claude/commands/: sc-git-worktree.md
.claude/scripts/: envelope.py  worktree_abort.py  worktree_cleanup.py  worktree_create.py  worktree_scan.py  worktree_shared.py  worktree_update.py
.cursor/: orchestration-agent-models.yaml  phase-A-orchestration.json  phase-B-orchestration.json  phase-c-web-server-orchestration.json
.cursor/agents/: cursor-quality-mgr.md
.cursor/commands/: cursor-orchestration.md
.github/workflows/: ci.yml  release-preflight.yml  release-retry-distribution.yml  release.yml
boundaries/wyvern/: cli.toml
boundaries/wyvern-host/: host.toml
boundaries/wyvern-mcp/: mcp.toml
boundaries/wyvern-schema/: schema.toml
boundaries/wyvern-viewer/: viewer.toml
boundaries/wyvern-window/: window.toml
boundaries/wyvern-wizard/: wizard.toml
crates/wyvern/: Cargo.toml
crates/wyvern-host/: Cargo.toml
crates/wyvern-host/src/: browser_catalog.rs  browser_launch.rs  browser_registry.rs  error.rs  handle.rs  lib.rs  markdown.rs  options.rs  picker.rs  picker_dispatch.rs  server.rs  session.rs  static_files.rs
crates/wyvern-host/src/question/: mod.rs  preview.rs
crates/wyvern-host/src/routes/: api_error.rs  dialog.rs  mod.rs  picker.rs  result.rs  wizard.rs
crates/wyvern-host/tests/: http_chrome.rs  http_input.rs  http_markdown.rs  http_message.rs  http_question.rs  wizard_dismiss.rs  wizard_finish.rs  wizard_history.rs  wizard_layout_picker.rs  wizard_navigate.rs  wizard_routes.rs  wizard_shared_mount.rs  wizard_stack.rs  wizard_state.rs  wizard_turbo_flow.rs  wizard_workspace_hint.rs
crates/wyvern-host/tests/support/: http.rs  mod.rs
crates/wyvern-mcp/: Cargo.toml
crates/wyvern-mcp/src/: lib.rs
crates/wyvern-schema/: Cargo.toml
crates/wyvern-schema/src/: button.rs  chrome.rs  command.rs  error.rs  error_code.rs  field_name.rs  icons.rs  lib.rs  media.rs  result.rs  stderr.rs  validate.rs  wizard.rs
crates/wyvern-schema/src/validate/: chrome.rs  helpers.rs  input.rs  markdown.rs  message.rs  mod.rs  question.rs  tests.rs  wizard.rs
crates/wyvern-schema/tests/: question_contract_examples.rs  validation_chrome.rs  validation_input.rs  validation_markdown.rs  validation_message.rs  validation_question.rs  validation_wizard.rs
crates/wyvern-viewer/: Cargo.toml
crates/wyvern-viewer/src/: dismiss.rs  lib.rs  main.rs  platform.rs  run.rs  viewport.rs
crates/wyvern-viewer/tests/: viewport_bounds.rs  wizard_dismiss.rs
crates/wyvern-window/: Cargo.toml
crates/wyvern-window/src/: error.rs  lib.rs  run.rs  window.rs
crates/wyvern-window/src/chrome/: ipc.rs  mod.rs  platform.rs  render.rs  template.html
crates/wyvern-window/src/icons/: mod.rs
crates/wyvern-window/src/input/: mod.rs  picker.rs  render.rs  template.html
crates/wyvern-window/src/markdown/: mod.rs  render.rs  styles.css  template.html
crates/wyvern-window/src/message/: media.rs  mod.rs  render.rs  template.html
crates/wyvern-window/src/question/: handler.rs  mod.rs  render.rs  sanitize.rs  template.html
crates/wyvern-window/src/run/: chrome.rs  input.rs  markdown.rs  message.rs  mod.rs
crates/wyvern-window/tests/: blank_window.rs  chrome_ipc.rs  chrome_minimize_ipc.rs  input_file_ipc.rs  input_file_multi_ipc.rs  input_folder_ipc.rs  input_ipc.rs  input_minimize_ipc.rs  markdown_minimize_ipc.rs  message_ipc.rs  message_minimize_ipc.rs  question_dismiss_ipc.rs  question_ipc.rs  question_minimize_ipc.rs  question_multi_ipc.rs  support.rs
crates/wyvern-wizard/: Cargo.toml
crates/wyvern-wizard/src/: history.rs  lib.rs  session.rs
crates/wyvern-wizard/tests/: history_five_cases.rs  history_four_cases.rs  layout_picker_forward_restore.rs  single_page.rs  stack_restore.rs
crates/wyvern/src/: browsers_cmd.rs  cli_args.rs  embedded_ui.rs  error.rs  input.rs  lib.rs  main.rs  main_observability.rs  observability.rs  pipeline.rs  viewer_spawn.rs
crates/wyvern/tests/: cli_validation.rs
crates/wyvern/ui/chrome/: index.html  style.css
crates/wyvern/ui/input/: app.js
crates/wyvern/ui/markdown/: style.css
crates/wyvern/ui/message/: app.js  index.html
crates/wyvern/ui/question/: app.js
crates/wyvern/ui/shared/: embedded-chrome.css  wizard-nav.js  wyvern-api.js
crates/wyvern/ui/wizard/: chrome.html
docs/: RELEASE_SECRETS.md  WINGET_SETUP.md  architecture.md  linting.md  observability.md  project-plan.md  release-inventory-schema.json  requirements.md
docs/plans/: project-plan.md
docs/prd/: wyvern-prd.md
docs/wyvern/: architecture.md  requirements.md
docs/wyvern-host/: architecture.md  requirements.md
docs/wyvern-mcp/: architecture.md  requirements.md
docs/wyvern-schema/: architecture.md  requirements.md
docs/wyvern-viewer/: architecture.md  requirements.md
docs/wyvern-window/: architecture.md  requirements.md
docs/wyvern-wizard/: architecture.md  requirements.md
release/: RELEASE-NOTES-TEMPLATE.md  publish-artifacts.toml
scripts/: check-boundaries.py  check-ui-sync.sh  demo-embedded-message.sh  demo-embedded-tour.sh  demo-view.sh  demo-wizard-tour.sh  demo-wizard.sh  release_artifacts.py  release_gate.sh  validate_release.py  verify-c9-deletion.sh  verify_release_archive.py
scripts/demo-views/: chrome-frame.json  input-file.json  input-folder.json  input-multiline.json  input-text.json  markdown-short.json  message-buttons.json  message-fixed-size.json  message-long-line.json  message-minimal.json  (+5 more)
(+319 files in other folders)
