[workspace]
# Target: wyvern-host (c.10); wyvern-viewer (c.15); wyvern-window deleted in c.9.
# Planning: docs/plans/phase-C/c9-deletion.md, c10-http-host-message.md
members = [
    "crates/wyvern",
    "crates/wyvern-schema",
    "crates/wyvern-window",   # remove in c.9
    "crates/wyvern-wizard",
    "crates/wyvern-mcp",
    # "crates/wyvern-host",   # add c.10
    # "crates/wyvern-viewer", # add c.15
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
# Webview
wry    = "0.44"
winit  = "0.30"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Markdown → HTML (wyvern-window only; never wyvern-schema)
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

# Validation
strsim = "0.11"

# Async (MCP server)
tokio = { version = "1", features = ["full"] }

# Logging (crates.io — see docs/plans/phase-A/a6-sc-observability.md)
sc-observability = "1.2"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
