[workspace]
# Target: wyvern-host (c.10); wyvern-viewer (c.15).
# Planning: docs/plans/phase-C/c9-deletion.md, c10-http-host-message.md
members = [
    "crates/wyvern",
    "crates/wyvern-schema",
    "crates/wyvern-wizard",
    "crates/wyvern-mcp",
    "crates/wyvern-host",
    "crates/wyvern-viewer",
]
resolver = "2"

[workspace.package]
version    = "0.1.0"
license    = "MIT"
repository = "https://github.com/randlee/wyvern"
homepage   = "https://github.com/randlee/wyvern"

[workspace.dependencies]
# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Markdown (host content_html / preview_html)
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
ammonia = "4"

# Validation
strsim = "0.11"

# Async (MCP server / HTTP host)
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "limit"] }
tracing = "0.1"
http-body-util = "0.1"

# Embedded viewer (c.15)
wry   = "0.53"
winit = "0.30"
url   = "2"

# Browser registry / system launch (c.15)
dirs       = "6"
webbrowser = "1"

# Logging (crates.io — see docs/plans/phase-A/a6-sc-observability.md)
sc-observability = "1.2"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true

# crates.io wayland-scanner 0.31.10 pins quick-xml ^0.39 (RUSTSEC-2026-0194/0195).
# Do not patch from smithay/wayland-rs master: generated Proxy APIs diverge and
# break wayland-client on Linux (E0277). Vendor crates.io 0.31.10 with a minimal
# quick-xml 0.41 adapt instead — see third_party/wayland-scanner/VENDOR.md.
[patch.crates-io]
wayland-scanner = { path = "third_party/wayland-scanner" }
