[package]
name        = "wyvern-host"
version     = "0.1.0"
edition     = "2021"
license    = { workspace = true }
repository = { workspace = true }
homepage   = { workspace = true }
description = "Wyvern HTTP dialog host — bind, serve packaged UI, await POST /api/result"

[dependencies]
wyvern-schema = { path = "../wyvern-schema" }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
axum          = { workspace = true }
tower         = { workspace = true }
tower-http    = { workspace = true }
tracing       = { workspace = true }
rfd           = "0.15"
pulldown-cmark = { workspace = true }
ammonia       = { workspace = true }
dirs          = { workspace = true }
webbrowser    = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
tower          = { workspace = true, features = ["util"] }
reqwest        = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serial_test    = "3"
tempfile       = "3"
