[package]
name              = "wyvern-host"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true
description = "Wyvern HTTP dialog host — bind, serve packaged UI, await POST /api/result"
keywords    = ["wyvern", "dialog", "webview", "http"]
categories  = ["command-line-utilities", "web-programming"]
readme      = "../../README.md"

[dependencies]
wyvern-schema = { workspace = true }
wyvern-wizard = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
axum          = { workspace = true }
tower         = { workspace = true }
tower-http    = { workspace = true }
tracing       = { workspace = true }
rfd           = "0.15"
pulldown-cmark = { workspace = true }
ammonia       = { workspace = true }
dirs          = { workspace = true }
webbrowser    = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
tower          = { workspace = true, features = ["util"] }
reqwest        = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serial_test    = "3"
tempfile       = "3"
