[package]
name        = "wyvern-schema"
version     = "0.1.0"
edition     = "2021"
license    = { workspace = true }
repository = { workspace = true }
homepage   = { workspace = true }
description = "Wyvern JSON types, validation, and error messages"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
strsim     = { workspace = true }

[dev-dependencies]
serial_test = "3"
