[package]
name              = "wyvern-viewer"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true
description = "Wyvern embedded URL viewer — wry window that loads a dialog URL"
keywords    = ["wyvern", "webview", "viewer", "wry"]
categories  = ["command-line-utilities", "gui"]
readme      = "../../README.md"

[[bin]]
name = "wyvern-viewer"
path = "src/main.rs"

[lib]
name = "wyvern_viewer"
path = "src/lib.rs"

[dependencies]
wry   = { workspace = true }
winit = { workspace = true }
url   = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

# wry on Linux needs an initialized GTK main loop alongside winit.
[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
gtk = "0.18"
